# jarvis-executive-summary

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
claude/rules/: commits.md  data-structures.md  logging.md  pr-quality.md  python.md  testing.md
docs/specs/: infrastructure-spec.md  initial-spec.md  plugin-cybersec-news.md  plugin-osint.md
jarvis/: __main__.py  config.py  orchestrator.py
jarvis/core/: exceptions.py  groq_queue.py  loader.py  logging.py  plugin.py  redaction.py  slack.py  summarizer.py
plugins/aws_billing/: README.md  auth.py  chunker.py  plugin.py  prompt.md
plugins/drata/: README.md  auth.py  plugin.py  prompt.md
plugins/github/: README.md  auth.py  plugin.py  prompt.md
plugins/gmail/: README.md  auth.py  plugin.py  prompt.md  setup.py
plugins/news/: README.md  auth.py  plugin.py  prompt.md
plugins/osint/: README.md  auth.py  plugin.py  prompt.md
plugins/securityhub/: README.md  auth.py  plugin.py  prompt.md
plugins/site24x7/: README.md  auth.py  plugin.py  prompt.md  setup.py
plugins/stocks/: README.md  auth.py  plugin.py  prompt.md
plugins/trump/: README.md  auth.py  plugin.py  prompt.md
plugins/weather/: README.md  auth.py  plugin.py  prompt.md
scripts/: dry_run.py  sync_env_to_ssm.sh
terraform/: ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  scheduler.tf  security_group.tf  ssm.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/core/: test_groq_queue.py  test_loader.py  test_summarizer.py
(+10 files in other folders)
