[project]
name = "jarvis-executive-summary"
version = "0.1.0"
description = "One-shot executive brief agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "groq>=0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "slack-sdk>=3.29",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "feedparser>=6.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis", "plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: hits real network or takes > 1s",
    "livedata: requires real credentials in .env",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
